# l4sm

./: .gitignore  Cargo.toml  README.md  justfile  linker-script.x  setup.gdb
.config/tracey/: config.styx
capability/: Cargo.toml  spec.md
capability/src/: cdt.rs  cnode.rs  cspace.rs  info.rs  lib.rs  untyped.rs
capability/tests/: integration.rs
src/: logger.rs  main.rs  pl011.rs  platform.rs
src/arch/: feature.rs  mod.rs
